--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -371,7 +371,7 @@
     <string name="CoinOption_AddressFormatTitle">Adres Formatı</string>
     <string name="CoinOption_SyncModeTitle">Geri Yükleme Ayarları</string>
     <string name="CoinOption_bip44_Subtitle">Eski (%s ile başlar)</string>
-    <string name="CoinOption_bip49_Subtitle">Popüler (%s. ile başlar)</string>
+    <string name="CoinOption_bip49_Subtitle">Popüler (%s ile başlar)</string>
     <string name="CoinOption_bip84_Subtitle">Yeni (%s ile başlar)</string>
     <!--Charts-->
     <string name="Charts_TimeDuration_Day">1G</string>
