--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -53,7 +53,7 @@
     <!--Restore-->
     <string name="Restore_ChooseWallet">Choisissez le portefeuille</string>
     <string name="Restore_Enter_Key_Title">Entrez la clé</string>
-    <string name="Restore_Enter_Key_Description_Mnemonic">Entrez votre clé privée pour le Portefeuille %1s 
+    <string name="Restore_Enter_Key_Description_Mnemonic" formatted="false">Entrez votre clé privée pour le Portefeuille %1s
 qui se compose de %2s mots. Les mots doivent être entrés dans leur ordre exact et séparés par des espaces.</string>
     <string name="Restore_ValidationFailed">Clé incorrect</string>
     <string name="Restore_RestoreFailed">Échec de la restauration du porte-monnaie</string>
@@ -62,7 +62,7 @@ qui se compose de %2s mots. Les mots doivent être entrés dans leur ordre exact
     <string name="Select_Coins">Choisissez la Crypto</string>
     <string name="Restore_BirthdayHeight_Hint">Hauteur d’anniversaire du porte-feuille (optionel)</string>
     <string name="Restore_BirthdayHeight_Description">Ce champ détermine où commencer à scanner les transactions. Laissez-le vide pour scanner depuis le début, ce qui prendra un certain temps.</string>
-    <string name="Restore_BirthdayHeight_InvalidError">Hauteur d'anniversaire invalide</string>
+    <string name="Restore_BirthdayHeight_InvalidError" formatted="false">Hauteur d\'anniversaire invalide</string>
     <!--Backup-->
     <string name="Backup_Intro_Title">Sauvegarde</string>
     <string name="Backup_Intro_TitleShow">Voir la clé</string>
@@ -84,7 +84,7 @@ qui se compose de %2s mots. Les mots doivent être entrés dans leur ordre exact
     <string name="Balance_Deposit">Recevoir</string>
     <string name="Balance_Send">Envoyer</string>
     <string name="Balance_Swap">Echanger</string>
-    <string name="Balance_RatePerCoin">%s par %s</string>
+    <string name="Balance_RatePerCoin" formatted="false">%s par %s</string>
     <string name="Balance_SyncedUntil">jusqu\'à: %s</string>
     <string name="Balance_Syncing">Synchronisation…</string>
     <string name="Balance_SearchingTransactions">Recherche des transactions…</string>
@@ -95,7 +95,7 @@ qui se compose de %2s mots. Les mots doivent être entrés dans leur ordre exact
     <string name="Balance_Sort_PopupTitle">Trier par</string>
     <string name="Balance_Sort_Az">Nom</string>
     <string name="Balance_Sort_24hPriceChange">Prix 24h (%)</string>
-    <string name="Balance_Backup_Alert">Vous devez sauvegarder le portefeuille %s avant de recevoir %s.</string>
+    <string name="Balance_Backup_Alert" formatted="false">Vous devez sauvegarder le portefeuille %s avant de recevoir %s.</string>
     <!--Send-->
     <string name="Send_Title">Envoyer %s</string>
     <string name="Send_Hint_Address">Adresse</string>
@@ -142,8 +142,8 @@ qui se compose de %2s mots. Les mots doivent être entrés dans leur ordre exact
     <string name="Send_LockTime_HalfYear">6 mois</string>
     <string name="Send_LockTime_Year">1 an</string>
     <string name="Send_Sending">En attente</string>
-    <string name="Send_ERC_Alert">Frais de transaction pour %s (ERC20) payé en Ethereum. Il est nécessaire %s ETH.</string>
-    <string name="Send_Token_InsufficientFeeAlert">Frais de transaction pour %s (%s) payé en %s. Il est nécessaire %s.</string>
+    <string name="Send_ERC_Alert" formatted="false">Frais de transaction pour %s (ERC20) payé en Ethereum. Il est nécessaire %s ETH.</string>
+    <string name="Send_Token_InsufficientFeeAlert" formatted="false">Frais de transaction pour %s (%s) payé en %s. Il est nécessaire %s.</string>
     <!--Wallet Connect-->
     <string name="WalletConnect_Title">Wallet Connect</string>
     <string name="WalletConnect_Request">Requête</string>
@@ -178,7 +178,7 @@ qui se compose de %2s mots. Les mots doivent être entrés dans leur ordre exact
     <string name="Swap_TransactionSpeed">Vitesse de transaction </string>
     <string name="Swap_TransactionFee">Frais de transaction</string>
     <string name="Swap_ErrorInsufficientBalance">Solde insuffisant</string>
-    <string name="Swap_ErrorInsufficientBalanceForFee">Frais de transaction payés en %s. Vous avez besoin de %s.</string>
+    <string name="Swap_ErrorInsufficientBalanceForFee" formatted="false">Frais de transaction payés en %s. Vous avez besoin de %s.</string>
     <string name="Swap_ErrorInsufficientEthBalance">Le solde actuel des ETH est inférieur au montant requis pour traiter cette transaction, frais de transaction compris.</string>
     <string name="Swap_ErrorNoLiquidity">Pas de liquidité</string>
     <string name="Swap_ErrorCouldNotFetchTrade">Impossible d\'accéder aux informations relatives à l\'achat</string>
@@ -212,7 +212,7 @@ qui se compose de %2s mots. Les mots doivent être entrés dans leur ordre exact
     <string name="Approve_Title">Swap Approve</string>
     <string name="Approve_FeeTitle">Frais</string>
     <string name="Approve_TransactionSpeedTitle">Vitesse de transaction </string>
-    <string name="Approve_InsufficientFeeAlert">Frais de transaction payés en %s. Vous avez besoin de %s.</string>
+    <string name="Approve_InsufficientFeeAlert" formatted="false">Frais de transaction payés en %s. Vous avez besoin de %s.</string>
     <string name="Approve_Info">Vous devez autoriser un contrat intelligent pour échanger un token donné en votre nom. Cette autorisation fixe le montant qui peut être utilisé par un contrat intelligent. Elle n\'affecte pas votre solde, mais nécessite des frais minimes pour l\'exécution de la transaction de validation.\n\nBien que cela puisse être fait à la demande avant chaque transaction, il est moins coûteux d\'approuver à l\'avance un montant plus élevé pour de futures transactions.</string>
     <string name="Approve_Error_AlreadyApproved">Vous avez déjà une provision pour ce montant</string>
     <!--Uniswap Info -->
@@ -224,7 +224,7 @@ qui se compose de %2s mots. Les mots doivent être entrés dans leur ordre exact
     <string name="UniswapInfo_PriceImpactTitle">Impact prix</string>
     <string name="UniswapInfo_PriceImpactDescription">L\'écart de prix attendu par rapport à un prix affiché, augmente généralement avec le montant de l\'échange.</string>
     <string name="UniswapInfo_SwapFeeTitle">Frais d\'échange</string>
-    <string name="UniswapInfo_SwapFeeDescription">Un frais de service pour le remplacement sur la plate-forme Uniswap, indiqué dans la devise vendue par l\'utilisateur. Pour la plupart des transactions, elle devrait être de 0,3 % ou 0,6 %.</string>
+    <string name="UniswapInfo_SwapFeeDescription" formatted="false">Un frais de service pour le remplacement sur la plate-forme Uniswap, indiqué dans la devise vendue par l\'utilisateur. Pour la plupart des transactions, elle devrait être de 0,3 % ou 0,6 %.</string>
     <string name="UniswapInfo_GuaranteedAmountTitle">Montant garanti</string>
     <string name="UniswapInfo_GuaranteedAmountDescription">Le montant minimum qu\'un utilisateur va recevoir à la suite d\'une action de remplacement.</string>
     <string name="UniswapInfo_MaxSpendTitle">Dépense maximale</string>
