--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -674,11 +674,11 @@
 
     <!--Charts-->
 
-    <string name="Charts_TimeDuration_Today">Today</string>
+    <string name="Charts_TimeDuration_Today">TDY (СГД)</string>
     <string name="Charts_TimeDuration_Day">24h</string>
     <string name="Charts_TimeDuration_Week">7D</string>
     <string name="Charts_TimeDuration_Month">1M</string>
-    <string name="Charts_TimeDuration_TwoWeeks">2W</string>
+    <string name="Charts_TimeDuration_TwoWeeks"></string>
     <string name="Charts_TimeDuration_Month3">3M</string>
     <string name="Charts_TimeDuration_Quartal">3M</string>
     <string name="Charts_TimeDuration_HalfYear">6M</string>
