--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -674,7 +674,7 @@
 
     <!--Charts-->
 
-    <string name="Charts_TimeDuration_Today">TDY (СГД)</string>
+    <string name="Charts_TimeDuration_Today">TDY</string>
     <string name="Charts_TimeDuration_Day">24h</string>
     <string name="Charts_TimeDuration_Week">7D</string>
     <string name="Charts_TimeDuration_Month">1M</string>
